--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
   margin: 10px auto;
   width: 90%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -20,13 +19,13 @@ nav{
 }
 a{
 text-decoration: none;
-color: black;
+color:  #666AF6;
 }
 .main:hover{
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid  #666AF6;
 }
 .contact-me{
-  background-color: blueviolet;
+  background-color: #666AF6;
   color: white;
   border: none;
   padding: 10px 15px;
